--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
-    "@angular/forms": "^15.2.0",
+    "@angular/forms": "^15.2.9",
     "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
     "material": "^0.5.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
