--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap-icons": "^1.10.5",
     "material": "^0.5.3",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.20",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.1"
   },
