--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "material": "^0.5.3",
+    "moment": "^2.29.4",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.20",
     "tslib": "^2.3.0",
